--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -152,6 +152,7 @@ body {
 }
 
 .site-logo {
+    font-family: Pacifico, serif;
     max-height: 45px;
 }
 
@@ -561,8 +562,8 @@ The first (most recent) post in the list is styled to be bigger than the others 
 }
 
 .post-full-image {
-    height: 800px;
-    margin: 0 -10vw -165px;
+    height: 400px;
+    margin: 0 -10vw 0;
     background: var(--lightgrey) center center;
     background-size: cover;
     border-radius: 5px;
